<resources>
    <string name="app_name">iShop</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="create_list_title_label">Create List</string>
    <string name="create_list_name_hint_label">Enter list name</string>
    <string name="create_list_create_btn_label">Create List</string>

    <string name="create_item_title_label">New Item</string>
    <string name="create_item_name_hint_label">Enter item label</string>
    <string name="create_item_qty_hint_label">Enter item quantity</string>
    <string name="create_item_create_btn_label">Add Item</string>

    <string name="settings_username_label">Username</string>
    <string name="settings_save">Save Settings</string>
</resources>
