<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.student.nrm.ishop.CreateItemFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:text="@string/create_item_title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/new_item_label_input"
            android:hint="@string/create_item_name_hint_label"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/new_item_quantity_input"
            android:hint="@string/create_item_qty_hint_label"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />

        <Button
            android:text="@string/create_item_create_btn_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/create_item_action"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorAlternate" />
    </LinearLayout>
</FrameLayout>
