<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.student.nrm.ishop.CreateListFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_vertical_margin"
        android:gravity="center">

        <TextView
            android:text="@string/create_list_title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="24sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/create_list_name_input"
            android:hint="@string/create_list_name_hint_label"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin" />

        <Button
            android:text="@string/create_list_create_btn_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/create_list_action"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorAlternate" />
    </LinearLayout>
</FrameLayout>
